--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 
-<script type="text/javascript" src="./javascripts/main.js"></script>
+<!-- <script type="text/javascript" src="./javascripts/main.js"></script> -->
+<script type="text/javascript" src="./dist/app.js"></script> <!-- include the "dist.js" when using Browserify -->
 </body>
 </html>
